[gd_scene load_steps=14 format=3 uid="uid://c45qcxf1sjc2m"]

[ext_resource type="Script" path="res://main.gd" id="1_jy04a"]
[ext_resource type="PackedScene" uid="uid://ca286e578dumw" path="res://player/game_board.tscn" id="2_u78mf"]
[ext_resource type="PackedScene" uid="uid://dseqc5dhuplyd" path="res://unit/unit_overlay.tscn" id="3_htuxi"]
[ext_resource type="PackedScene" uid="uid://cvl7imya5r6jr" path="res://levels/world.tscn" id="3_kx1u0"]
[ext_resource type="PackedScene" uid="uid://boctck0gw4r35" path="res://player/cursor.tscn" id="3_m2ajo"]
[ext_resource type="PackedScene" uid="uid://nyn6dtkahy7t" path="res://player/unit_path.tscn" id="4_1c82y"]
[ext_resource type="PackedScene" uid="uid://tpti7gnta6gx" path="res://unit/enemy_unit.tscn" id="5_g13fi"]
[ext_resource type="Texture2D" uid="uid://dt4o5rmjifdjy" path="res://assets/kenney_tiny_battle/Tiles/tile_0121.png" id="8_4ma55"]
[ext_resource type="Texture2D" uid="uid://chm85ewh3glgk" path="res://assets/kenney_tiny_battle/Tiles/tile_0157.png" id="8_lwgos"]
[ext_resource type="PackedScene" uid="uid://cjxvdibthv0ig" path="res://unit/player_unit.tscn" id="8_wrmhb"]
[ext_resource type="PackedScene" uid="uid://bynelpp7obmgv" path="res://ui/selected_unit_hud.tscn" id="10_uchaq"]
[ext_resource type="PackedScene" uid="uid://b4cj70bm6xhep" path="res://ui/timer_ui.tscn" id="13_0lhqn"]
[ext_resource type="AudioStream" uid="uid://bxhih078tr7s1" path="res://assets/audio/music/Fields of Ice.wav" id="14_fg1ed"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("level_start_timer")]
script = ExtResource("1_jy04a")
level_start_timer = NodePath("LevelStart")

[node name="TimerUI" parent="." node_paths=PackedStringArray("timer") instance=ExtResource("13_0lhqn")]
timer = NodePath("../LevelStart")

[node name="World" parent="." instance=ExtResource("3_kx1u0")]

[node name="GameBoard" parent="." node_paths=PackedStringArray("tilemap") instance=ExtResource("2_u78mf")]
tilemap = NodePath("../World")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("3_htuxi")]
position = Vector2(8, 8)

[node name="UnitPath" parent="GameBoard" instance=ExtResource("4_1c82y")]
z_index = 2
position = Vector2(8, 8)

[node name="EnemyUnit" parent="GameBoard" instance=ExtResource("5_g13fi")]
position = Vector2(165, 72)
skin = ExtResource("8_lwgos")
move_range = 1000
move_speed = 100.0
max_attack_range = 100

[node name="PlayerUnit" parent="GameBoard" instance=ExtResource("8_wrmhb")]
position = Vector2(329, 332)
skin = ExtResource("8_4ma55")
move_speed = 400.0

[node name="PlayerUnit2" parent="GameBoard" instance=ExtResource("8_wrmhb")]
position = Vector2(359, 332)
skin = ExtResource("8_4ma55")
move_speed = 400.0

[node name="PlayerUnit3" parent="GameBoard" instance=ExtResource("8_wrmhb")]
position = Vector2(437, 330)
skin = ExtResource("8_4ma55")
move_speed = 400.0

[node name="PlayerUnit4" parent="GameBoard" instance=ExtResource("8_wrmhb")]
position = Vector2(517, 324)
skin = ExtResource("8_4ma55")
move_speed = 400.0

[node name="Cursor" parent="GameBoard" instance=ExtResource("3_m2ajo")]

[node name="SelectedUnitHUD" parent="." instance=ExtResource("10_uchaq")]

[node name="LevelStart" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_fg1ed")
volume_db = -15.965
autoplay = true
bus = &"music"
